[gd_scene load_steps=14 format=3 uid="uid://bppbgy361y7l3"]

[ext_resource type="Script" path="res://machinatext/control.gd" id="1_0fbet"]
[ext_resource type="Shader" path="res://machinatext/control.gdshader" id="1_fj5cn"]
[ext_resource type="Script" path="res://machinatext/input.gd" id="2_62e2m"]
[ext_resource type="Script" path="res://machinatext/command_processor.gd" id="2_ee4bf"]
[ext_resource type="Script" path="res://machinatext/tree.gd" id="2_kbped"]
[ext_resource type="FontFile" uid="uid://7gefjp167jfe" path="res://machinatext/OGCourier.otf" id="3_ee4bf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iy58a"]
shader = ExtResource("1_fj5cn")
shader_parameter/overlay = false
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.03
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 1.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0fbet"]
bg_color = Color(0.05615304, 0.22067188, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fj5cn"]
shader = ExtResource("1_fj5cn")
shader_parameter/overlay = false
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.122000005795
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 2.115
shader_parameter/roll_size = 15.9370007570075
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.1550000073625
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.1250000059375
shader_parameter/aberration = 0.00500004773750006
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.1750000083125
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.1150000054625

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6a6wx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62e2m"]
bg_color = Color(0.09850656, 0.328561, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qtu10"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ee4bf"]

[node name="Control" type="Control"]
material = SubResource("ShaderMaterial_iy58a")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0fbet")
max_lines_rememebered = 8

[node name="command processor" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_ee4bf")

[node name="forest" type="Node" parent="."]
script = ExtResource("2_kbped")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0fbet")

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer"]
z_index = 1
material = SubResource("ShaderMaterial_fj5cn")
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GameInfo" type="PanelContainer" parent="PanelContainer/MarginContainer/rows"]
material = SubResource("ShaderMaterial_6a6wx")
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_62e2m")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/rows/GameInfo"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
follow_focus = true

[node name="History" type="VBoxContainer" parent="PanelContainer/MarginContainer/rows/GameInfo/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="InputArea" type="PanelContainer" parent="PanelContainer/MarginContainer/rows"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/rows/InputArea"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/rows/InputArea/HBoxContainer"]
layout_mode = 2
text = " > "

[node name="input" type="LineEdit" parent="PanelContainer/MarginContainer/rows/InputArea/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_ee4bf")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_qtu10")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ee4bf")
max_length = 48
script = ExtResource("2_62e2m")

[node name="reset" type="Button" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -54.0
offset_bottom = 31.0
grow_horizontal = 0
text = "RESET"

[node name="Label" type="Label" parent="."]
visible = false
z_index = 3
layout_mode = 1
anchors_preset = -1
offset_left = 238.0
offset_top = 135.0
offset_right = 374.0
offset_bottom = 340.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(3.8961844e-05, 0.646256, 0.06660809, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "▄▄▄█████▓
▓  ██▒ ▓▒
▒ ▓██░ ▒░
░ ▓██▓ ░ 
  ▒██▒ ░ 
  ▒ ░░   
    ░    
  ░     "
horizontal_alignment = 3

[node name="Label2" type="Label" parent="."]
visible = false
z_index = 3
layout_mode = 1
anchors_preset = -1
offset_left = 398.0
offset_top = 270.0
offset_right = 521.0
offset_bottom = 501.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(3.8961844e-05, 0.646256, 0.06660809, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "  ██░ ██ 
▓██░ ██▒
▒██▀▀██░
░▓█ ░██ 
░▓█▒░██▓
 ▒ ░░▒░▒
 ▒ ░▒░ ░
 ░  ░░ ░
 ░  ░  ░"
horizontal_alignment = 3

[node name="Label3" type="Label" parent="."]
visible = false
z_index = 3
layout_mode = 1
anchors_preset = -1
offset_left = 558.0
offset_top = 135.0
offset_right = 685.0
offset_bottom = 366.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(3.8961844e-05, 0.646256, 0.06660809, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = " ██▀███  
▓██ ▒ ██▒
▓██ ░▄█ ▒
▒██▀▀█▄  
░██▓ ▒██▒
░ ▒▓ ░▒▓░
  ░▒ ░ ▒░
  ░░   ░ 
   ░     "
horizontal_alignment = 3

[node name="Label4" type="Label" parent="."]
visible = false
z_index = 3
layout_mode = 1
anchors_preset = -1
offset_left = 693.0
offset_top = 135.0
offset_right = 800.0
offset_bottom = 366.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(3.8961844e-05, 0.646256, 0.06660809, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "▓█████ 
▓█   ▀ 
▒███   
▒▓█  ▄ 
░▒████▒
░░ ▒░ ░
 ░ ░  ░
   ░   
   ░  ░"
horizontal_alignment = 3

[node name="Label5" type="Label" parent="."]
visible = false
z_index = 3
layout_mode = 1
anchors_preset = -1
offset_left = 808.0
offset_top = 135.0
offset_right = 915.0
offset_bottom = 366.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(3.8961844e-05, 0.646256, 0.06660809, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "▓█████ 
▓█   ▀ 
▒███   
▒▓█  ▄ 
░▒████▒
░░ ▒░ ░
 ░ ░  ░
   ░   
   ░  ░"
horizontal_alignment = 3

[node name="PanelContainer2" type="PanelContainer" parent="."]
visible = false
z_index = 2
layout_mode = 0
offset_left = 211.0
offset_top = 105.0
offset_right = 251.0
offset_bottom = 145.0
scale = Vector2(19.452564, 10.180315)

[connection signal="text_submitted" from="PanelContainer/MarginContainer/rows/InputArea/HBoxContainer/input" to="." method="_on_input_text_submitted"]
[connection signal="text_submitted" from="PanelContainer/MarginContainer/rows/InputArea/HBoxContainer/input" to="PanelContainer/MarginContainer/rows/InputArea/HBoxContainer/input" method="_on_text_submitted"]
[connection signal="button_down" from="reset" to="." method="_on_button_button_down"]
